--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mux/mux-node": "^11.1.0",
     "@mux/mux-player": "^3.4.0",
+    "ffmpeg": "^0.0.4",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
