--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.812.0",
+    "@aws-sdk/s3-request-presigner": "^3.812.0",
     "@mux/mux-node": "^11.1.0",
     "@mux/mux-player": "^3.4.0",
     "ffmpeg": "^0.0.4",
