--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.1",
     "react-textarea-autosize": "^8.5.9",
     "sass": "^1.89.0"
   },
