--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.812.0",
     "@mux/mux-node": "^11.1.0",
     "@mux/mux-player": "^3.4.0",
+    "aws-sdk": "^2.1692.0",
     "cheerio": "^1.0.0",
     "ffmpeg": "^0.0.4",
     "next": "^15.2.4",
