--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "react-textarea-autosize": "^8.5.9",
-    "sass": "^1.89.0"
+    "sass": "^1.89.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
