--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/image-url": "^1.1.0",
     "aws-sdk": "^2.1692.0",
     "cheerio": "^1.0.0",
+    "dotenv": "^17.0.0",
     "ffmpeg": "^0.0.4",
     "next": "^15.2.4",
     "node-fetch": "^3.3.2",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "react-textarea-autosize": "^8.5.9",
+    "resend": "^4.6.0",
     "sass": "^1.89.0",
     "swiper": "^11.2.8"
   },
