--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,10 +15,11 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.99.0",
+    "@sanity/vision": "^4.14.2",
+    "fdir": "6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.99.0",
+    "sanity": "^4.14.2",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
