--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mux/mux-player": "^3.4.0",
     "@sanity/client": "^7.5.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.14.2",
+    "sanity": "^4.14.2",
     "aws-sdk": "^2.1692.0",
     "cheerio": "^1.0.0",
     "dotenv": "^17.0.0",
     "ffmpeg": "^0.0.4",
-    "next": "^15.2.4",
+    "next": "^15.5.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
@@ -41,7 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.5.7",
     "typescript": "^5"
   }
 }
